<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AlzCare</string>
    <string name="passwordforgotten">Forgot your password ?</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="invalidLogin">invalid Data or Something Went Wrong</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birth_date">Birth Date (YYYY-MM-DD)</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="civil_number">Civil Number</string>
    <string name="password">Password...</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="code">Code</string>
    <string name="speciality">Speciality</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="alzcare">AlzCare</string>
    <string name="select_date">Select Date</string>
    <string name="open">open</string>
    <string name="close">close</string>

</resources>