<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_login">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.example.alzcare.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.login.LoginActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guide_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="100dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/top_guide_line">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:Error="@{vm.emailError}">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawableRight="@drawable/ic_email"
                    android:textSize="18sp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:text="@={vm.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:Error="@{vm.passwordError}">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="@={vm.password}"
                    android:drawableRight="@drawable/ic_lock_outline"
                    android:textSize="18sp"
                    android:layout_marginBottom="20dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:textSize="24sp"
                android:padding="10dp"
                android:onClick="@{()->vm.login()}"
                android:text="Login"
                android:textAllCaps="false"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Don't Have Account ?"
                    android:textSize="18sp"
                    android:padding="6dp"/>
                <TextView
                    android:id="@+id/already_have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->vm.navigateToRegister()}"
                    android:text="@string/create_account"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:padding="6dp"/>
            </LinearLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>