<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_register">

    <data>

        <variable
            name="vm"
            type="com.example.alzcare.ui.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.register.RegisterActivity">

        <LinearLayout
            android:id="@+id/role_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Choose your role :"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/patientRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Patient"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:checked="@{vm.selectedRole.equals(`Patient`)}"
                    android:onClick="@{()->vm.patientRegistration()}" />

                <RadioButton
                    android:id="@+id/doctorRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Doctor"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:checked="@{vm.selectedRole.equals(`Doctor`)}"
                    android:onClick="@{()->vm.doctorRegistration()}" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/other_fields_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/role_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:Error="@{vm.userNameError}">

                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="User Name"
                    android:inputType="textPersonName"
                    android:text="@={vm.userName}"
                    android:drawableRight="@drawable/ic_person_outline"
                    android:textSize="18sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_number_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:Error="@{vm.phoneNumberError}">

                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Phone Number"
                    android:inputType="phone"
                    android:text="@={vm.phoneNumber}"
                    android:drawableRight="@drawable/ic_person_outline"
                    android:textSize="18sp"
                    android:lines="1"
                    android:maxLength="14"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:Error="@{vm.emailError}">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_email"
                    android:textSize="18sp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:text="@={vm.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:Error="@{vm.passwordError}">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="@={vm.password}"
                    android:drawableRight="@drawable/ic_lock_outline"
                    android:textSize="18sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_confirmation_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:Error="@{vm.passwordConfirmError}">

                <EditText
                    android:id="@+id/password_confirmation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:text="@={vm.passwordConfirmation}"
                    android:drawableRight="@drawable/ic_lock_outline"
                    android:textSize="18sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:textSize="24sp"
                android:padding="10dp"
                android:onClick="@{()->vm.register()}"
                android:text="@string/create_account"
                android:textAllCaps="false"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/register"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Already have Account?"
                    android:textSize="18sp"
                    android:padding="6dp"/>
                <TextView
                    android:id="@+id/already_have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->vm.navigateToLogin()}"
                    android:text="@string/login"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:padding="6dp"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>